rust/macros/tests/invalid/target/debug/deps/double_commas_rs-00eee57d6e97c93e.d
/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/double_commas_rs-00eee57d6e97c93e.rmeta: double-commas.rs

/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/double_commas_rs-00eee57d6e97c93e.d: double-commas.rs

double-commas.rs:
